<resources>
    <string name="app_name">Chit Chat</string>

    <!--  LOGIN ACTIVITY  -->
    <string name="txt_button_login">LOGIN</string>
    <string name="txt_hint_password">Password</string>
    <string name="txt_hint_email">Email</string>
    <string name="txt_welcome_description">Silahkan login terlebih dahulu dengan menggunakan username dan password anda.</string>
    <string name="txt_welcome_back">Selamat Datang Kembali!</string>
    <string name="txt_do_not_have_account">Belum punya akun?</string>
    <string name="txt_login_success">Login Success</string>

    <!--  REGISTER ACTIVITY  -->
    <string name="txt_button_register">Daftar</string>
    <string name="txt_already_have_account">Sudah punya akun?</string>
    <string name="txt_welcome_newcomer">Halo, Selamat Datang!</string>
    <string name="txt_welcome_register_description">Silahkan buat akun terlebih dahulu sebelum masuk ke aplikasi.</string>
    <string name="txt_hint_password_confirmation">Konfirmasi Password</string>
    <string name="txt_hint_name">Nama</string>

    <!--  MESSAGE INFO FRAGMENT  -->
    <string name="txt_fragment_message_info">Message Info</string>

    <!--  CHAT ROOM FRAGMENT  -->
    <string name="txt_uploading">Uploading</string>
    <string name="txt_online">Online</string>
    <string name="txt_typing">Typing…</string>

    <!--  OTHER  -->
    <string name="default_notification_channel_id">chitchatchannelid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_read">Read</string>
    <string name="txt_delivered">Delivered</string>

    <!--  USER LIST ACTIVITY  -->
    <string name="txt_btn_new_group">New Group</string>
    <string name="txt_users_on_app">Users on ChitChat</string>
    <string name="txt_user_list_title">Let\'s Chat</string>
    <string name="txt_new_group_title">New Group</string>
    <string name="txt_create_group_title">Create Group</string>
    <string name="txt_button_create_group">Create Group</string>
    <string name="txt_hint_group_name">Group Name</string>
    <string name="txt_total_member">Total Member</string>
    <string name="txt_total_member_value">%d (Including You)</string>
    <string name="txt_empty_group_name">Please input the group name</string>
    <string name="txt_tap_to_see_group_info">Tap to see group information</string>
    <string name="txt_unread_messages">unread messages</string>
    <string name="txt_today">Today</string>
    <string name="txt_yesterday">Yesterday</string>
    <string name="txt_group_profile">Group Profile</string>
    <string name="txt_add_participant">Add Participant</string>
    <string name="txt_select_user_title">Select user</string>
    <string name="txt_description_label">Description</string>
    <string name="txt_read_by">Read By</string>
    <string name="txt_new_message">New Message</string>

</resources>