<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?android:attr/windowBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="?android:attr/textColor"
            app:title="@string/txt_create_group_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_rounded_card"
        android:backgroundTint="?attr/background"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="@id/layoutGroupBasicInfo"
        app:layout_constraintEnd_toEndOf="@id/layoutGroupBasicInfo"
        app:layout_constraintTop_toTopOf="@id/cardAvatar"
        app:layout_constraintBottom_toBottomOf="@id/layoutGroupBasicInfo"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="@dimen/corner_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:strokeWidth="0dp">

        <ImageView
            android:id="@+id/ivGroupPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_default_group_avatar"/>

        <ImageView
            android:id="@+id/ivAddPhoto"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:tint="?attr/colorPrimary"
            android:layout_gravity="center"
            android:padding="8dp"
            android:background="@drawable/bg_rounded_card"
            android:backgroundTint="?attr/background"
            android:src="@drawable/ic_camera"/>
    </com.google.android.material.card.MaterialCardView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGroupBasicInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/bg_rounded_card"
        android:backgroundTint="?attr/background"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardAvatar">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGroupName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_hint_group_name"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etGroupName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/ivGroupIcon"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_people"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilGroupName"
            app:tint="?android:attr/colorPrimary" />

        <TextView
            android:id="@+id/tvTotalMemberTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/txt_total_member"
            app:layout_constraintStart_toEndOf="@id/ivGroupIcon"
            app:layout_constraintTop_toTopOf="@+id/ivGroupIcon" />

        <TextView
            android:id="@+id/tvTotalMember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/ivGroupIcon"
            app:layout_constraintTop_toBottomOf="@id/tvTotalMemberTitle"
            tools:text="32 (Including You)" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCreateGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_button_create_group"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutGroupBasicInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>